<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.games.GameResultsActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/game_stats_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_stats_title"
        android:textColor="#000000"
        android:layout_marginTop="@dimen/large_margin"
        android:textStyle="bold"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <TextView
        android:id="@+id/game_stats_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/game_stats_desc"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_stats_title"/>

    <TextView
        android:id="@+id/game_stats_score_title"
        android:paddingTop="@dimen/large_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_stats_score_title"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_stats_desc"/>

    <TextView
        android:id="@+id/game_stats_score"
        android:paddingTop="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_stats_score_placeholder"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_stats_score_title"/>

    <TextView
        android:id="@+id/game_stats_q1"
        android:paddingTop="@dimen/large_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_stats_question_q1_incorrect"
        android:maxLines="4"
        android:ellipsize="end"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_stats_score"/>

    <TextView
        android:id="@+id/game_stats_q2"
        android:paddingTop="@dimen/large_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_stats_question_q2_incorrect"
        android:textColor="#000000"
        android:maxLines="4"
        android:ellipsize="end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_stats_q1"/>

    <TextView
        android:id="@+id/game_stats_q3"
        android:paddingTop="@dimen/large_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_stats_question_q3_incorrect"
        android:textColor="#000000"
        android:maxLines="4"
        android:ellipsize="end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_stats_q2"/>

    <Button
        android:id="@+id/game_stats_exit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/generic_exit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_stats_q3"/>

</android.support.constraint.ConstraintLayout>