<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018. Created by Alexander Toop. Assignment for Aberystwyth University.
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/coordinator"
    android:layout_height="match_parent"
    tools:context=".ui.phrases.AddPhraseActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_main" />

        <TextView
            android:id="@+id/addPhraseInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/extra_large_vertical_margin"
            android:text="@string/add_phrase_instructions"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nativePhraseBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/extra_large_vertical_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addPhraseInstructions">

            <EditText
                android:id="@+id/nativePhraseEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:hint="@string/add_phrase_native_phrase"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/translatedPhraseBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/extra_large_vertical_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nativePhraseBody">

            <EditText
                android:id="@+id/translatedPhraseEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:hint="@string/add_phrase_translated_phrase"/>

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/translatedPhraseBody"
            android:layout_marginTop="@dimen/extra_large_vertical_margin"
            app:layout_constraintTop_toBottomOf="@+id/translatedPhraseBody"
            app:layout_constraintLeft_toLeftOf="@+id/translatedPhraseBody"
            app:layout_constraintRight_toRightOf="@+id/translatedPhraseBody"
            android:text="@string/generic_save" />


    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>


