<?xml version="1.0" encoding="utf-8"?><!--
      ~ Copyright (c) 2018. Created by Alexander Toop. Assignment for Aberystwyth University.
      -->
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.LanguagePickerActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_initial_choose" />

        <TextView
            android:id="@+id/defineLanWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/extra_large_vertical_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:text="@string/define_language_welcome"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nativeLanguageBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/extra_large_vertical_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/defineLanWelcome">


            <EditText
                android:id="@+id/nativeLanguageEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/define_language_native_lan"
                android:imeOptions="actionDone"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/translatedLanguageBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/extra_large_vertical_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nativeLanguageBody">

            <EditText
                android:id="@+id/translatedLanguageEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/define_language_learn_lan"
                android:imeOptions="actionDone"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/saveLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question3Body"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/extra_large_vertical_margin"
            app:layout_constraintTop_toBottomOf="@+id/translatedLanguageBody"
            app:layout_constraintLeft_toLeftOf="@+id/translatedLanguageBody"
            app:layout_constraintRight_toRightOf="@+id/translatedLanguageBody"
            android:text="@string/generic_save" />

    </android.support.constraint.ConstraintLayout>



</android.support.design.widget.CoordinatorLayout>


